package p05_factory_method;

public class Color {
    private String name = "Color";

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
