package p05_factory_method;

public interface IFactory {
    Color factoryCreate();
}
